# nonebot-plugin-alias

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_alias/: __init__.py  alias_list.py  handler.py  parser.py
