[tool.poetry]
name = "nonebot_plugin_alias"
version = "0.4.0"
description = "A simple plugin for adding aliases for Nonebot command"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-alias"
repository = "https://github.com/noneplugin/nonebot-plugin-alias"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = { version = "^2.0.0-rc.1", extras = ["fastapi"] }
nonebot-adapter-onebot = "^2.2.0"
nonebot-plugin-datastore = "^0.5.0"
expandvars = ">=0.8.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
nb-cli = "^1.0.0"
black = "^22.1.0"

[tool.nonebot]
plugins = ["nonebot_plugin_alias"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
